# shipreceipt

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  release.yml  security.yml
docs/: architecture.md  receipt-format.md
release-notes/: v0.1.0.md
scripts/: build_zipapp.py  checksums.py  security_scan.py
src/shipreceipt/: __init__.py  __main__.py  canonical.py  cli.py  errors.py  inventory.py  io.py  keys.py  models.py  service.py
tests/e2e/: test_cli.py
tests/integration/: test_delivery_flow.py
tests/unit/: test_inventory.py  test_keyfile.py  test_service.py
