[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "shipreceipt"
version = "0.1.0"
description = "Create and verify tamper-evident receipts for file deliveries."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "KanadeK" }]
keywords = ["delivery", "manifest", "checksum", "integrity", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security :: Cryptography",
  "Topic :: System :: Archiving",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "build>=1.2.2,<2",
  "mypy>=1.15,<2",
  "pytest>=8.3,<10",
  "pytest-cov>=6,<8",
  "ruff>=0.11,<1",
]

[project.scripts]
shipreceipt = "shipreceipt.cli:entrypoint"

[dependency-groups]
dev = [
  "build>=1.2.2,<2",
  "mypy>=1.15,<2",
  "pytest>=8.3,<10",
  "pytest-cov>=6,<8",
  "ruff>=0.11,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/shipreceipt"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "integration: exercises multiple modules against the filesystem",
  "e2e: exercises the installed-style command-line user flow",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "S"]
ignore = ["S603"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src", "scripts"]
